--- a/style.css
+++ b/style.css
@@ -98,3 +98,31 @@ input[type="checkbox"]{
     color: cyan;
   }
 }
+
+
+div h2{
+    background: black;
+    color: white;
+    text-align: center;
+    font-size: 34px;
+    margin-top: 40px;
+}
+
+div img{
+    border-image-slice: fill;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+div .Into{
+    text-align: center;
+    font-size: 24px;
+}
+
+div .disclaimer{
+    font-weight: bold;
+    text-align: center;
+    font-size: 24px;
+}
