--- a/style.css
+++ b/style.css
@@ -126,3 +126,9 @@ div .disclaimer{
     text-align: center;
     font-size: 24px;
 }
+
+div .closer{
+    text-align: left;
+    font-size: 24px;
+    
+}
