--- a/index.css
+++ b/index.css
@@ -1,57 +1,1 @@
-#travelTitle{
-  text-size-adjust: 45px;
-  text-align: center;
-  color: rgba(128, 128, 128, 0.541);
-  background-color: white;
-}
-
-#subtitle{
-  text-align: center;
-  color: rgba(128, 128, 128, 0.541);
-  background-color: white;
-  margin-top: -0.57cm;
-}
-
-#destination-form{
-  text-align: center;
-  background-color: lightblue;
-  padding-top: .5cm;
-  padding-bottom: .5cm;
-  margin-top: -0.48cm;
-}
-/* #comment-form{
-text-align: center;
-background-color: lightblue;
-padding-top: .5cm;
-padding-bottom: .5cm;
-margin-top: -0.48cm;
-} */
-.location-card:hover {
-  box-shadow: 0 8px 16px 0 rgb(0, 26, 255);
-}
-
-.location-card {
-  background-color: lightblue;
-  border: solid;
-  border-color: #05e2ff;
-  padding: 50px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  margin: 30px;
-  float: left;
-  text-align: center;
-  width: 100px;
-  height: 275px;
-}
-
-#container-location {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-img {
-  height: 125px;
-  width: 125px;
- 
-}
+/* /
